[package]
name = "temporalio-sdk-core-c-bridge"
version = "0.1.0"
edition = "2024"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "C bridge for Temporal Core SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-rust"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]
publish = false

[lib]
name = "temporalio_sdk_core_c_bridge"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
crossbeam-utils = "0.8"
futures-util = { version = "0.3", default-features = false }
http = "1.3"
libc = "0.2"
prost = { workspace = true }
# We rely on Cargo semver rules not updating a 0.x to 0.y. Per the rand
# documentation, before 1.0, minor 0.x updates _can_ break portability which can
# cause non-determinism.
rand = "0.10"
rand_pcg = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1.47", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = "0.7"
tonic = { workspace = true, default-features = false }
tracing = "0.1"
url = "2.5"
# This is only needed as an explicit dependency so we can enable static as a feature
xz2 = { version = "0.1", optional = true }

[dependencies.temporalio-client]
path = "../client"
version = "0.3"

[dependencies.temporalio-sdk-core]
path = "../sdk-core"
version = "0.3"
features = ["ephemeral-server", "otel"]

[dependencies.temporalio-common]
path = "../common"
version = "0.3"
features = ["core-based-sdk", "otel"]

[dev-dependencies]
base64 = "0.22"
futures-util = "0.3"
thiserror = { workspace = true }

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[features]
antithesis_assertions = ["temporalio-sdk-core/antithesis_assertions"]
xz2-static = ["xz2/static"]
