[package]
name = "temporal-wasm-hello-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
temporalio-macros = { path = "../../../crates/macros" }
temporalio-workflow = { path = "../../../crates/workflow" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "temporal:hello-workflow"

[workspace]
