[package]
name = "temporal-wasm-hello-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
temporalio-workflow = { path = "../../../crates/workflow" }

[build-dependencies]
wasm-encoder = "=0.247.0"
wat = "=1.248.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "temporal:hello-workflow"

[workspace]
